Update 2
-Completion of the Board.class with all of the necessary properties and methods

-Next steps will be to properly comment what we
 have as well as work on the movement of the snake